[project]
name = "uncharted"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "João Bernardo Oliveira", email = "jboliveira@inoa.com.br" }
]
requires-python = ">=3.14"
dependencies = [
    "rich>=15.0.0",
]

[project.scripts]
uncharted = "uncharted:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
